main/zcode/parser/ZCodeParser.py
# Generated from ./main/zcode/parser/ZCode.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ZCodeParser ( Parser ):

    grammarFileName = "ZCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "'number'", "'bool'", "'string'", 
                     "'return'", "'var'", "'dynamic'", "'func'", "'for'", 
                     "'until'", "'by'", "'break'", "'continue'", "'if'", 
                     "'else'", "'elif'", "'begin'", "'end'", "'not'", "'and'", 
                     "'or'", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", "'<-'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'...'", 
                     "'('", "')'", "'['", "']'", "','", "'\n'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "NUMBER", "BOOL", "STRING", 
                      "RETURN", "VAR", "DYNAMIC", "FUNC", "FOR", "UNTIL", 
                      "BY", "BREAK", "CONTINUE", "IF", "ELSE", "ELIF", "BEGIN", 
                      "END", "NOT", "AND", "OR", "PLUS", "MINUS", "MULT", 
                      "DIV", "MOD", "EQUAL", "LEFTARR", "EQUALEQUAL", "NOTEQUAL", 
                      "LESS", "GREATER", "LESSOREQUAL", "GREATEROREQUAL", 
                      "ELLIPSIS", "LBracket", "RBracket", "LSBracket", "RSBracket", 
                      "COMMA", "NEWLINE", "NumberLit", "BooleanLit", "StringLit", 
                      "IDENTIFIER", "COMMENT", "WS", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_mainFunction = 0
    RULE_program = 1
    RULE_decl = 2
    RULE_arrayDeclaration = 3
    RULE_arrayDim = 4
    RULE_arrayInit = 5
    RULE_numberList = 6
    RULE_numberPrime = 7
    RULE_boolList = 8
    RULE_boolPrime = 9
    RULE_stringList = 10
    RULE_stringPrime = 11
    RULE_arrayList = 12
    RULE_arrayPrime = 13
    RULE_arithExpr = 14
    RULE_arithExpr1 = 15
    RULE_arithExpr2 = 16
    RULE_arithExpr3 = 17
    RULE_logicExpr = 18
    RULE_logicExpr1 = 19
    RULE_logicExpr2 = 20
    RULE_logicExpr3 = 21
    RULE_stringConcatExpr = 22
    RULE_relExpr = 23
    RULE_arithComp = 24
    RULE_literalComp = 25
    RULE_arithRelOp = 26
    RULE_literalOp = 27
    RULE_elementAccessExpr = 28
    RULE_arrExpr = 29
    RULE_indexOp = 30
    RULE_functionCall = 31
    RULE_functionArgsList = 32
    RULE_argsPrime = 33
    RULE_arg = 34
    RULE_statement = 35
    RULE_variableDeclaration = 36
    RULE_normalDeclaration = 37
    RULE_varType = 38
    RULE_varDecl = 39
    RULE_dynamicDecl = 40
    RULE_variableInitialization = 41
    RULE_expression = 42
    RULE_paramDeclList = 43
    RULE_paramDeclPrime = 44
    RULE_paramDeclAtom = 45
    RULE_functionDecl = 46
    RULE_nullableListOfNEWLINE = 47
    RULE_ifStatement = 48
    RULE_elifStatementList = 49
    RULE_elifStatementPrime = 50
    RULE_elifStatement = 51
    RULE_elseStatement = 52
    RULE_forStatement = 53
    RULE_updateExpr = 54
    RULE_breakStatement = 55
    RULE_continueStatement = 56
    RULE_returnStatement = 57
    RULE_functionCallStatement = 58
    RULE_blockStatement = 59
    RULE_blockStatementBody = 60
    RULE_nullableListOfStatement = 61

    ruleNames =  [ "mainFunction", "program", "decl", "arrayDeclaration", 
                   "arrayDim", "arrayInit", "numberList", "numberPrime", 
                   "boolList", "boolPrime", "stringList", "stringPrime", 
                   "arrayList", "arrayPrime", "arithExpr", "arithExpr1", 
                   "arithExpr2", "arithExpr3", "logicExpr", "logicExpr1", 
                   "logicExpr2", "logicExpr3", "stringConcatExpr", "relExpr", 
                   "arithComp", "literalComp", "arithRelOp", "literalOp", 
                   "elementAccessExpr", "arrExpr", "indexOp", "functionCall", 
                   "functionArgsList", "argsPrime", "arg", "statement", 
                   "variableDeclaration", "normalDeclaration", "varType", 
                   "varDecl", "dynamicDecl", "variableInitialization", "expression", 
                   "paramDeclList", "paramDeclPrime", "paramDeclAtom", "functionDecl", 
                   "nullableListOfNEWLINE", "ifStatement", "elifStatementList", 
                   "elifStatementPrime", "elifStatement", "elseStatement", 
                   "forStatement", "updateExpr", "breakStatement", "continueStatement", 
                   "returnStatement", "functionCallStatement", "blockStatement", 
                   "blockStatementBody", "nullableListOfStatement" ]

    EOF = Token.EOF
    T__0=1
    NUMBER=2
    BOOL=3
    STRING=4
    RETURN=5
    VAR=6
    DYNAMIC=7
    FUNC=8
    FOR=9
    UNTIL=10
    BY=11
    BREAK=12
    CONTINUE=13
    IF=14
    ELSE=15
    ELIF=16
    BEGIN=17
    END=18
    NOT=19
    AND=20
    OR=21
    PLUS=22
    MINUS=23
    MULT=24
    DIV=25
    MOD=26
    EQUAL=27
    LEFTARR=28
    EQUALEQUAL=29
    NOTEQUAL=30
    LESS=31
    GREATER=32
    LESSOREQUAL=33
    GREATEROREQUAL=34
    ELLIPSIS=35
    LBracket=36
    RBracket=37
    LSBracket=38
    RSBracket=39
    COMMA=40
    NEWLINE=41
    NumberLit=42
    BooleanLit=43
    StringLit=44
    IDENTIFIER=45
    COMMENT=46
    WS=47
    ERROR_CHAR=48
    UNCLOSE_STRING=49
    ILLEGAL_ESCAPE=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MainFunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(ZCodeParser.FUNC, 0)

        def LBracket(self):
            return self.getToken(ZCodeParser.LBracket, 0)

        def paramDeclList(self):
            return self.getTypedRuleContext(ZCodeParser.ParamDeclListContext,0)


        def RBracket(self):
            return self.getToken(ZCodeParser.RBracket, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ZCodeParser.NEWLINE)
            else:
                return self.getToken(ZCodeParser.NEWLINE, i)

        def returnStatement(self):
            return self.getTypedRuleContext(ZCodeParser.ReturnStatementContext,0)


        def blockStatement(self):
            return self.getTypedRuleContext(ZCodeParser.BlockStatementContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_mainFunction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainFunction" ):
                return visitor.visitMainFunction(self)
            else:
                return visitor.visitChildren(self)




    def mainFunction(self):

        localctx = ZCodeParser.MainFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_mainFunction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(ZCodeParser.FUNC)
            self.state = 125
            self.match(ZCodeParser.T__0)
            self.state = 126
            self.match(ZCodeParser.LBracket)
            self.state = 127
            self.paramDeclList()
            self.state = 128
            self.match(ZCodeParser.RBracket)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ZCodeParser.NEWLINE:
                self.state = 129
                self.match(ZCodeParser.NEWLINE)
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.RETURN]:
                self.state = 135
                self.returnStatement()
                pass
            elif token in [ZCodeParser.BEGIN]:
                self.state = 136
                self.blockStatement()
                pass
            elif token in [ZCodeParser.EOF, ZCodeParser.VAR, ZCodeParser.FUNC]:
                pass
            else:
                pass
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ZCodeParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ZCodeParser.NEWLINE)
            else:
                return self.getToken(ZCodeParser.NEWLINE, i)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZCodeParser.DeclContext)
            else:
                return self.getTypedRuleContext(ZCodeParser.DeclContext,i)


        def getRuleIndex(self):
            return ZCodeParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ZCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ZCodeParser.NEWLINE:
                self.state = 139
                self.match(ZCodeParser.NEWLINE)
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ZCodeParser.VAR or _la==ZCodeParser.FUNC:
                self.state = 145
                self.decl()
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 151
            self.match(ZCodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainFunction(self):
            return self.getTypedRuleContext(ZCodeParser.MainFunctionContext,0)


        def functionDecl(self):
            return self.getTypedRuleContext(ZCodeParser.FunctionDeclContext,0)


        def varDecl(self):
            return self.getTypedRuleContext(ZCodeParser.VarDeclContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = ZCodeParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.mainFunction()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.functionDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 155
                self.varDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def LSBracket(self, i:int=None):
            if i is None:
                return self.getTokens(ZCodeParser.LSBracket)
            else:
                return self.getToken(ZCodeParser.LSBracket, i)

        def arrayDim(self):
            return self.getTypedRuleContext(ZCodeParser.ArrayDimContext,0)


        def RSBracket(self, i:int=None):
            if i is None:
                return self.getTokens(ZCodeParser.RSBracket)
            else:
                return self.getToken(ZCodeParser.RSBracket, i)

        def LEFTARR(self):
            return self.getToken(ZCodeParser.LEFTARR, 0)

        def arrayInit(self):
            return self.getTypedRuleContext(ZCodeParser.ArrayInitContext,0)


        def NUMBER(self):
            return self.getToken(ZCodeParser.NUMBER, 0)

        def BOOL(self):
            return self.getToken(ZCodeParser.BOOL, 0)

        def STRING(self):
            return self.getToken(ZCodeParser.STRING, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_arrayDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayDeclaration" ):
                return visitor.visitArrayDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def arrayDeclaration(self):

        localctx = ZCodeParser.ArrayDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arrayDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZCodeParser.NUMBER) | (1 << ZCodeParser.BOOL) | (1 << ZCodeParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 159
            self.match(ZCodeParser.IDENTIFIER)
            self.state = 160
            self.match(ZCodeParser.LSBracket)
            self.state = 161
            self.arrayDim()
            self.state = 162
            self.match(ZCodeParser.RSBracket)
            self.state = 163
            self.match(ZCodeParser.LEFTARR)
            self.state = 164
            self.match(ZCodeParser.LSBracket)
            self.state = 165
            self.arrayInit()
            self.state = 166
            self.match(ZCodeParser.RSBracket)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayDimContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NumberLit(self):
            return self.getToken(ZCodeParser.NumberLit, 0)

        def COMMA(self):
            return self.getToken(ZCodeParser.COMMA, 0)

        def arrayDim(self):
            return self.getTypedRuleContext(ZCodeParser.ArrayDimContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_arrayDim

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayDim" ):
                return visitor.visitArrayDim(self)
            else:
                return visitor.visitChildren(self)




    def arrayDim(self):

        localctx = ZCodeParser.ArrayDimContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_arrayDim)
        try:
            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.match(ZCodeParser.NumberLit)
                self.state = 169
                self.match(ZCodeParser.COMMA)
                self.state = 170
                self.arrayDim()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 171
                self.match(ZCodeParser.NumberLit)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayInitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSBracket(self):
            return self.getToken(ZCodeParser.LSBracket, 0)

        def numberList(self):
            return self.getTypedRuleContext(ZCodeParser.NumberListContext,0)


        def RSBracket(self):
            return self.getToken(ZCodeParser.RSBracket, 0)

        def boolList(self):
            return self.getTypedRuleContext(ZCodeParser.BoolListContext,0)


        def stringList(self):
            return self.getTypedRuleContext(ZCodeParser.StringListContext,0)


        def arrayList(self):
            return self.getTypedRuleContext(ZCodeParser.ArrayListContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_arrayInit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayInit" ):
                return visitor.visitArrayInit(self)
            else:
                return visitor.visitChildren(self)




    def arrayInit(self):

        localctx = ZCodeParser.ArrayInitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arrayInit)
        try:
            self.state = 190
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.match(ZCodeParser.LSBracket)
                self.state = 175
                self.numberList()
                self.state = 176
                self.match(ZCodeParser.RSBracket)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 178
                self.match(ZCodeParser.LSBracket)
                self.state = 179
                self.boolList()
                self.state = 180
                self.match(ZCodeParser.RSBracket)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 182
                self.match(ZCodeParser.LSBracket)
                self.state = 183
                self.stringList()
                self.state = 184
                self.match(ZCodeParser.RSBracket)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 186
                self.match(ZCodeParser.LSBracket)
                self.state = 187
                self.arrayList()
                self.state = 188
                self.match(ZCodeParser.RSBracket)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def numberPrime(self):
            return self.getTypedRuleContext(ZCodeParser.NumberPrimeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_numberList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumberList" ):
                return visitor.visitNumberList(self)
            else:
                return visitor.visitChildren(self)




    def numberList(self):

        localctx = ZCodeParser.NumberListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_numberList)
        try:
            self.state = 194
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.NumberLit]:
                self.enterOuterAlt(localctx, 1)
                self.state = 192
                self.numberPrime()
                pass
            elif token in [ZCodeParser.RSBracket]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberPrimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NumberLit(self):
            return self.getToken(ZCodeParser.NumberLit, 0)

        def COMMA(self):
            return self.getToken(ZCodeParser.COMMA, 0)

        def numberPrime(self):
            return self.getTypedRuleContext(ZCodeParser.NumberPrimeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_numberPrime

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumberPrime" ):
                return visitor.visitNumberPrime(self)
            else:
                return visitor.visitChildren(self)




    def numberPrime(self):

        localctx = ZCodeParser.NumberPrimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_numberPrime)
        try:
            self.state = 200
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 196
                self.match(ZCodeParser.NumberLit)
                self.state = 197
                self.match(ZCodeParser.COMMA)
                self.state = 198
                self.numberPrime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 199
                self.match(ZCodeParser.NumberLit)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boolPrime(self):
            return self.getTypedRuleContext(ZCodeParser.BoolPrimeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_boolList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolList" ):
                return visitor.visitBoolList(self)
            else:
                return visitor.visitChildren(self)




    def boolList(self):

        localctx = ZCodeParser.BoolListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_boolList)
        try:
            self.state = 204
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.BooleanLit]:
                self.enterOuterAlt(localctx, 1)
                self.state = 202
                self.boolPrime()
                pass
            elif token in [ZCodeParser.RSBracket]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolPrimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BooleanLit(self):
            return self.getToken(ZCodeParser.BooleanLit, 0)

        def COMMA(self):
            return self.getToken(ZCodeParser.COMMA, 0)

        def boolPrime(self):
            return self.getTypedRuleContext(ZCodeParser.BoolPrimeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_boolPrime

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolPrime" ):
                return visitor.visitBoolPrime(self)
            else:
                return visitor.visitChildren(self)




    def boolPrime(self):

        localctx = ZCodeParser.BoolPrimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_boolPrime)
        try:
            self.state = 210
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 206
                self.match(ZCodeParser.BooleanLit)
                self.state = 207
                self.match(ZCodeParser.COMMA)
                self.state = 208
                self.boolPrime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 209
                self.match(ZCodeParser.BooleanLit)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stringPrime(self):
            return self.getTypedRuleContext(ZCodeParser.StringPrimeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_stringList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringList" ):
                return visitor.visitStringList(self)
            else:
                return visitor.visitChildren(self)




    def stringList(self):

        localctx = ZCodeParser.StringListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stringList)
        try:
            self.state = 214
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.StringLit]:
                self.enterOuterAlt(localctx, 1)
                self.state = 212
                self.stringPrime()
                pass
            elif token in [ZCodeParser.RSBracket]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringPrimeContext(ParserRuleContext):
        __slots__ = 'parser'
